<resources>
    <string name="app_name">My Application</string>

   <string name="act_main_fill_name">You can Search by Room ID eg. 10</string>

    <string name="app_logo_description">automacorp logo</string>
    <string name="act_main_welcome">Welcome on automacorp,
 the app to manage building windows</string>
    <string name="my_intro">Hello this is Irfan ULlah</string>
    <string name="act_main_open">Open</string>
    <string name="title_activity_weocome">Weocome</string>
    <string name="title_activity_buttonwork">buttonwork</string>
    <string name="title_activity_button_work">ButtonWork</string>
    <string name="title_activity_automacorp">AUTOMAcorp</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="act_room_name">Room name</string>

    <string name="act_room_current_temperature">Current temperature</string>
    <string name="act_room_target_temperature">Target temperature</string>
    <string name="act_room_none">No room found</string>

    <string name="act_room_current_temp">Current Temperature: %1$s°C</string>
    <string name="act_room_target_temp">Target Temperature: %1$s°C</string>
    <string name="act_room_save">Save value</string>

    <string name="app_go_back_description">Go back</string>
    <string name="app_go_room_description">Rooms</string>
    <string name="app_go_github_description">Github</string>
    <string name="app_go_mail_description">Send email</string>
    <string name="title_activity_room_list">RoomListActivity</string>
    <string name="title_activity_room_detail">RoomDetailActivity</string>
</resources>