...
        OutlinedTextField(
            value = name,
            onValueChange = { name = it },
            modifier = Modifier
                .padding(24.dp)
                .fillMaxWidth()
                .testTag("nameField"),
            placeholder = {
                Text(stringResource(R.string.act_main_fill_name))
            }
        )

            Button(
...
